--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
   <body>
     welcome.
+    <pre>
+      screen.width:
+      <script>document.write(screen.width)</script>
+    </pre>
+    <pre>
+      screen.height:
+      <script>document.write(screen.height)</script>
+    </pre>
+    <pre>
+      window.innerWidth:
+      <script>document.write(window.innerWidth)</script>
+    </pre>
+    <pre>
+      window.innerHeight:
+      <script>document.write(window.innerHeight)</script>
+    </pre>
+    <pre>
+      window.devicePixelRatio:
+      <script>document.write(window.devicePixelRatio)</script>
+    </pre>
   </body>
 </html>
