--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name=”viewport” content=”width=device-width,initial-scale=1″>
+    <meta name=”viewport” content=”width=1280,initial-scale=1″>
   </head>
   <body>
     welcome.
