--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name=”viewport” content=”width=1280″>
+    <meta name=”viewport” content="initial-scale=0.8">
   </head>
   <body>
     welcome.
