--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name=”viewport” content="initial-scale=0.8">
+    <meta name="mobile-web-app-capable" content="yes">
   </head>
   <body>
     welcome.
